--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   csv: ^5.1.1
   cupertino_icons: ^1.0.6
   desktop_drop: ^0.4.4
+  device_frame: ^1.1.0
   file_picker: ^6.1.1
   file_saver: ^0.2.9
   flutter:
@@ -42,6 +43,7 @@ dependencies:
     git:
       url: https://github.com/sadespresso/flutter-pie-menu.git
   salomon_bottom_bar: ^3.3.2
+  screenshot: ^2.1.0
   share_plus: ^7.2.2
   shared_preferences: ^2.2.2
   simple_icons: ^10.1.3
